import { InterfazOrdenar } from "../../Ordenamiento/InterfazOrdenar";

export abstract class Ordenamiento {
    abstract crearOrdenamiento(): InterfazOrdenar;
}