export enum PrioridadTarea {
    
    ALTA = 2,
    MEDIA = 1,
    BAJA = 0

}