
/*
importar y usar libreria Ale
 https://github.com/alemutn/stdio/tree/master
*/

export default class GestorDeArchivos { 


    
}