export enum EstadoTarea {

    COMPLETADO = "completado",
    PENDIENTE = "pendiente"

}